--- a/gestion-organizaciones/index.html
+++ b/gestion-organizaciones/index.html
@@ -5,7 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>Gestion de Organizaciones</title>
 <link rel="stylesheet" href="../core/style.css">
-</head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J43F4M6Z1E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-J43F4M6Z1E');
+</script>
 <body>
 <header class="top-bar">
   <a href="../" class="back-btn">⬅ Volver al menú</a>
