--- a/index.html
+++ b/index.html
@@ -265,8 +265,32 @@
 .course-2 { background: linear-gradient(180deg,#ffffff,#f0fdf4); }
 .course-3 { background: linear-gradient(180deg,#ffffff,#fff7ed); }
 
+@media (max-width: 600px) {
+  .stats {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 14px;
+    margin-top: 24px;
+  }
 
-  </style>
+  .stat {
+    min-width: 0;
+    padding: 16px 12px;
+    border-radius: 18px;
+    text-align: center;
+  }
+
+  .stat .num {
+    font-size: 22px;
+  }
+
+  .stat .label {
+    font-size: 12px;
+  }
+}
+
+</style>
+
 </head>
 
 <body>
