--- a/metodologia-investigacion/index.html
+++ b/metodologia-investigacion/index.html
@@ -5,6 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>METODOLOGIA DE LA INVESTIGACION</title>
 <link rel="stylesheet" href="../core/style.css">
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J43F4M6Z1E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-J43F4M6Z1E');
+</script>
 </head>
 <body>
 <header class="top-bar">
