--- a/proteccion-civil/index.html
+++ b/proteccion-civil/index.html
@@ -11,6 +11,14 @@ No modificar número de opciones sin revisar buildQuestionsFrom()
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>Protección Civil</title>
 <link rel="stylesheet" href="../core/style.css">
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J43F4M6Z1E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-J43F4M6Z1E');
+</script>
 </head>
 <body>
 <header class="top-bar">
