--- a/index.html
+++ b/index.html
@@ -288,6 +288,32 @@
     font-size: 12px;
   }
 }
+/* =========================
+   FIX STATS MOBILE
+   ========================= */
+@media (max-width: 600px) {
+  .stats {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 14px;
+  }
+
+  .stat {
+    min-width: unset;
+    width: 100%;
+    padding: 16px 14px;
+    border-radius: 18px;
+  }
+
+  .stat .num {
+    font-size: 22px;
+  }
+
+  .stat .label {
+    font-size: 12px;
+  }
+}
+
 
 </style>
 
