--- a/index.html
+++ b/index.html
@@ -203,17 +203,7 @@
     color: #475569;
   }
 }
-@media (max-width: 640px) {
-  .stats {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 14px;
-  }
 
-  .stats .stat:last-child {
-    grid-column: span 2;
-  }
-}
 .campus-hero {
   max-width: 680px;
   margin: 0 auto 28px;
@@ -289,24 +279,27 @@
   }
 }
 /* =========================
-   FIX STATS MOBILE
+   STATS MOBILE FINAL
    ========================= */
 @media (max-width: 600px) {
   .stats {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 14px;
+    margin-top: 24px;
   }
 
   .stat {
-    min-width: unset;
+    min-width: 0;
     width: 100%;
     padding: 16px 14px;
     border-radius: 18px;
+    text-align: center;
   }
 
   .stat .num {
     font-size: 22px;
+    font-weight: 800;
   }
 
   .stat .label {
