--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
       display: flex;
       justify-content: center;
       gap: 18px;
-      margin-top: 30px;
+      margin-top: 40px; /* antes 30px */
+      margin-bottom: 32px; /* NUEVO */
       flex-wrap: wrap;
     }
+
 
     .stat {
       background: #fff;
@@ -206,7 +208,7 @@
 
 .campus-hero {
   max-width: 680px;
-  margin: 0 auto 28px;
+  margin: 16px auto 32px; /* antes 0 auto 28px */
   padding: 20px;
   border-radius: 18px;
   background:
@@ -304,6 +306,14 @@
 
   .stat .label {
     font-size: 12px;
+  }
+  .hero {
+    padding-bottom: 28px;
+  }
+
+  .campus-hero {
+    margin-top: 12px;
+    padding: 22px;
   }
 }
 
