--- a/seguridad-privada/index.html
+++ b/seguridad-privada/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>SEGURIDAD PRIVADA</title>
-  <!-- CSS del test -->
-  <link rel="stylesheet" href="./style.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<title>SEGURIDAD PRIVADA</title>
+<!-- CSS del test -->
+<link rel="stylesheet" href="./style.css">
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J43F4M6Z1E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-J43F4M6Z1E');
+</script>
 </head>
 <body>
 
